--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>林茗蓁 1103351</h1>
-									<p>期中網站</p>
+									<p>期末網站</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
