--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 											<a style="border-width:3px;border-style:dashed;border-color:#663a3f;padding:5px;"href="vue/index.html" class="image fit"><img src="images/vue.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a style="border-width:3px;border-style:dashed;border-color:#663a3f;padding:5px;"href="form/templates/form.html" class="image fit"><img src="images/form.jpg" alt=""></a>
+											<a style="border-width:3px;border-style:dashed;border-color:#663a3f;padding:5px;"href="form/index.html" class="image fit"><img src="images/form.jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
